--- a/book2014.md
+++ b/book2014.md
@@ -8,12 +8,12 @@
 
 201405 달에게 들려주고 싶은 이야기 - 신경숙
 --------------------------
-
 짤은 단편. 여러개 모음집.
 
 
-201405 나는 거대한 꿈을 꾸었다(손정희 평전)-이나리
+201405 나는 거대한 꿈을 꾸었다-이나리
 ---------------------------
+손정희 평전
 
 
 201406 왜나는 너를 사랑하는가 - 알랭드보통
